Fixing title alignment.

--- a/app/assets/stylesheets/songs.css.sass
+++ b/app/assets/stylesheets/songs.css.sass
@@ -25,10 +25,14 @@ p.user-toolbar
     color: red !important
 
 div.content-heading
-  h2
-    color: $gray
+
   p
     font-size: 1.25em
     &.description
       margin-bottom: 40px
+
+div.profile-heading
+  margin-bottom: 60px
+  h2
+    color: $gray
 
